sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value num
  var a=num.size
        ^AlgBubbleSort1:4: error: not found: value lgr
  for (i<-1 to (lgr-2)){
                ^