sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var a=num.size
  for (i<-1 to (lgr-2)){
    if(plusPetit(i,i+1)==true){
      echange(i,i+1)
    }
  }
}